# mymodbus

./: Cargo.toml  LICENSE  README.md
config/: mymodbus.conf
src/: history_cache.rs  http_server.rs  initialization.rs  logging.rs  main.rs  manager_modbus.rs  persistence.rs  poller.rs  registers.rs  shutdown.rs
src/manager_modbus/: mod.rs  modbus.rs  modbus_mock.rs
