[package]
name = "mymodbus"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = { version = "4.9", default-features = false }
anyhow = "1"
log = "0.4"
signal-hook = "0.4"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
